Prevent footer from overlapping game-id-input

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,6 +6,12 @@
     display: flex;
 }
 
+@media (max-width: 450px) {
+    .footer__content {
+        flex-direction: column;
+    }
+}
+
 .footer__link {
     display: flex;
     margin: 16px;
